ZCS-9475:- Implemented functionality to display registered devices in the mobile devices settings.

--- a/WebRoot/messages/ZaMsg_ca.properties
+++ b/WebRoot/messages/ZaMsg_ca.properties
@@ -2767,3 +2767,28 @@ ERROR_InvalidRPLifetime = El rang ha de ser un nombre enter positiu.
 ERROR_RPExists = La pol\u00edtica "{0}" ja existeix.
 multiple_servers = servidors m\u00faltiples
 ERROR_INVALID_FILE_NAME = El nom del fitxer no \u00e9s v\u00e0lid. Feu servir el bot\u00f3 de navegaci\u00f3 per seleccionar un fitxer v\u00e0lid.
+
+BUSY_GETTING_SYNC_DEVICES = S\u0027estan obtenint els dispositius sincronitzats ...
+BUSY_QUARANTINE_SYNC_DEVICES = S\u0027estan suspenent els dispositius sincronitzats ...
+BUSY_REMOVING_SYNC_DEVICES = S\u0027estan suprimint els dispositius sincronitzats ...
+BUSY_RESETING_SYNC_DEVICES = S\u0027estan restablint els dispositius sincronitzats ...
+BUSY_RESUMING_SYNC_DEVICES = S\u0027est\u00e0 permetent reprendre els dispositius sincronitzats ...
+BUSY_WIPING_SYNC_DEVICES = Netejant els dispositius sincronitzats ...
+MB_Active = Actiu
+MB_Blocked = Bloquejat
+MB_But_Resume = Repr\u00e8n la sincronitzaci\u00f3
+MB_But_Suspend = Susp\u00e8n la sincronitzaci\u00f3
+MB_But_Wipe = Esborrar el dispositiu
+MB_Device_Id_col = Identificador de dispositiu
+MB_Device_col = Dispositiu
+MB_Eas_col = EAS
+MB_Email_Address_col = Correu electr\u00f2nic
+MB_Last_Login_col = \u00daltim inici de sessi\u00f3
+MB_Need_Prov = Necessita avituallament
+MB_Registered_Devices = Dispositius registrats
+MB_Server_col = Servidor
+MB_Status_col = Estat
+MB_Suspended = Susp\u00e8s
+MB_Wipe_ACK = Neteja pendent
+MB_Wipe_Comp = Esborrat completat
+TABT_Mobile = M\u00f2bil
