--- a/WebRoot/messages/ZaMsg_da.properties
+++ b/WebRoot/messages/ZaMsg_da.properties
@@ -2677,3 +2677,28 @@ ERROR_InvalidRPLifetime = Omr\u00e5det skal v\u00e6r et positivt heltal.
 ERROR_RPExists = Politik "{0}" findes allerede.
 multiple_servers = flere servere
 ERROR_INVALID_FILE_NAME = Ugyldigt filnavn. Brug knappen Gennemse til at v\u00e6lge en gyldig fil.
+
+BUSY_GETTING_SYNC_DEVICES = S\u00e5dan f\u00e5r du synkroniserede enheder ...
+BUSY_QUARANTINE_SYNC_DEVICES = Suspenderer synkroniserede enheder ...
+BUSY_REMOVING_SYNC_DEVICES = Fjerner synkroniserede enheder ...
+BUSY_RESETING_SYNC_DEVICES = Nulstiller synkroniserede enheder ...
+BUSY_RESUMING_SYNC_DEVICES = Tillader synkroniserede enheder at genoptages ...
+BUSY_WIPING_SYNC_DEVICES = Sletning af synkroniserede enheder ...
+MB_Active = Aktiv
+MB_Blocked = Blokeret
+MB_But_Resume = Genoptag synkronisering
+MB_But_Suspend = Suspender synkronisering
+MB_But_Wipe = T\u00f8r enhed
+MB_Device_Id_col = Enheds-id
+MB_Device_col = Enhed
+MB_Eas_col = EAS
+MB_Email_Address_col = Email adresse
+MB_Last_Login_col = Sidste login
+MB_Need_Prov = Behov for klarg\u00f8ring
+MB_Registered_Devices = Registrerede enheder
+MB_Server_col = Server
+MB_Status_col = status
+MB_Suspended = Suspenderet
+MB_Wipe_ACK = T\u00f8rres afventende
+MB_Wipe_Comp = T\u00f8rring afsluttet
+TABT_Mobile = Mobil
