--- a/WebRoot/messages/ZaMsg_en_GB.properties
+++ b/WebRoot/messages/ZaMsg_en_GB.properties
@@ -2672,3 +2672,29 @@ ERROR_InvalidRPLifetime = The range must be a positive integer.
 ERROR_RPExists = Policy "{0}" already exists.
 multiple_servers = multiple servers
 ERROR_INVALID_FILE_NAME = Invalid file name. Use browse button to select a valid file.
+
+BUSY_GETTING_SYNC_DEVICES = Getting synced devices ...
+BUSY_QUARANTINE_SYNC_DEVICES = Suspending synced devices ...
+BUSY_RESUMING_SYNC_DEVICES = Allowing synced devices to resume...
+BUSY_REMOVING_SYNC_DEVICES = Removing synced devices ...
+BUSY_RESETING_SYNC_DEVICES = Reseting synced devices ...
+BUSY_WIPING_SYNC_DEVICES = Wiping synced devices ...
+
+TABT_Mobile = Mobile
+MB_Registered_Devices = Registered Devices
+MB_Email_Address_col = Email Address
+MB_Last_Login_col = Last Login
+MB_Device_col = Device
+MB_Device_Id_col = Device ID
+MB_Status_col = Status
+MB_Eas_col = EAS
+MB_Server_col = Server
+MB_But_Suspend = Suspend Sync
+MB_But_Resume = Resume Sync
+MB_But_Wipe = Wipe Device
+MB_Need_Prov = Needs provisioning
+MB_Active = Active
+MB_Suspended = Suspended
+MB_Wipe_ACK = Wipe pending
+MB_Wipe_Comp = Wipe completed
+MB_Blocked = Blocked
