--- a/WebRoot/messages/ZaMsg_hu.properties
+++ b/WebRoot/messages/ZaMsg_hu.properties
@@ -2777,3 +2777,28 @@ ERROR_InvalidRPLifetime = Ennek a tartom\u00e1nynak pozit\u00edv eg\u00e9sz sz\u
 ERROR_RPExists = A(z) \u201e{0}\u201d h\u00e1zirend m\u00e1r l\u00e9tezik.
 multiple_servers = t\u00f6bb kiszolg\u00e1l\u00f3
 ERROR_INVALID_FILE_NAME = \u00c9rv\u00e9nytelen f\u00e1jln\u00e9v. A Tall\u00f3z\u00e1s gombbal v\u00e1lasszon ki egy \u00e9rv\u00e9nyes f\u00e1jlt.
+
+BUSY_GETTING_SYNC_DEVICES = Szinkroniz\u00e1lt eszk\u00f6z\u00f6k lek\u00e9r\u00e9se ...
+BUSY_QUARANTINE_SYNC_DEVICES = A szinkroniz\u00e1lt eszk\u00f6z\u00f6k felf\u00fcggeszt\u00e9se ...
+BUSY_REMOVING_SYNC_DEVICES = Szinkroniz\u00e1lt eszk\u00f6z\u00f6k elt\u00e1vol\u00edt\u00e1sa ...
+BUSY_RESETING_SYNC_DEVICES = Szinkroniz\u00e1lt eszk\u00f6z\u00f6k vissza\u00e1ll\u00edt\u00e1sa ...
+BUSY_RESUMING_SYNC_DEVICES = A szinkroniz\u00e1lt eszk\u00f6z\u00f6k folytat\u00e1s\u00e1nak enged\u00e9lyez\u00e9se ...
+BUSY_WIPING_SYNC_DEVICES = Szinkroniz\u00e1lt eszk\u00f6z\u00f6k t\u00f6rl\u00e9se ...
+MB_Active = Akt\u00edv
+MB_Blocked = Z\u00e1rolt
+MB_But_Resume = Folytassa a szinkroniz\u00e1l\u00e1st
+MB_But_Suspend = A szinkron felf\u00fcggeszt\u00e9se
+MB_But_Wipe = T\u00f6r\u00f6lje az eszk\u00f6zt
+MB_Device_Id_col = Eszk\u00f6z azonos\u00edt\u00f3
+MB_Device_col = Eszk\u00f6z
+MB_Eas_col = EAS
+MB_Email_Address_col = Email c\u00edm
+MB_Last_Login_col = Utols\u00f3 bejelentkez\u00e9s
+MB_Need_Prov = Ki\u00e9p\u00edt\u00e9st ig\u00e9nyel
+MB_Registered_Devices = Regisztr\u00e1lt eszk\u00f6z\u00f6k
+MB_Server_col = szerver
+MB_Status_col = \u00c1llapot
+MB_Suspended = Felf\u00fcggesztett
+MB_Wipe_ACK = T\u00f6r\u00f6lje a f\u00fcgg\u0151ben
+MB_Wipe_Comp = A t\u00f6rl\u00e9s befejez\u0151d\u00f6tt
+TABT_Mobile = Mobil
