--- a/WebRoot/messages/ZaMsg_pl.properties
+++ b/WebRoot/messages/ZaMsg_pl.properties
@@ -2766,3 +2766,28 @@ ERROR_InvalidRPLifetime = Przedzia\u0142 musi stanowi\u0107 dodatni\u0105 liczb\
 ERROR_RPExists = Zasada "{0}" ju\u017c istnieje.
 multiple_servers = grupy serwer\u00f3w
 ERROR_INVALID_FILE_NAME = Nieprawid\u0142owa nazwa pliku. U\u017cyj przycisku Przegl\u0105daj, aby wybra\u0107 poprawny plik.
+
+BUSY_GETTING_SYNC_DEVICES = Pobieranie zsynchronizowanych urz\u0105dze\u0144 ...
+BUSY_QUARANTINE_SYNC_DEVICES = Zawieszam zsynchronizowane urz\u0105dzenia ...
+BUSY_REMOVING_SYNC_DEVICES = Usuwam zsynchronizowane urz\u0105dzenia ...
+BUSY_RESETING_SYNC_DEVICES = Resetuj\u0119 zsynchronizowane urz\u0105dzenia ...
+BUSY_RESUMING_SYNC_DEVICES = Zezwalam na wznowienie synchronizacji urz\u0105dze\u0144 ...
+BUSY_WIPING_SYNC_DEVICES = Czyszczenie zsynchronizowanych urz\u0105dze\u0144 ...
+MB_Active = Aktywny
+MB_Blocked = Zablokowany
+MB_But_Resume = Wzn\u00f3w synchronizacj\u0119
+MB_But_Suspend = Wstrzymaj synchronizacj\u0119
+MB_But_Wipe = Wyczy\u015b\u0107 urz\u0105dzenie
+MB_Device_Id_col = Identyfikator urzadzenia
+MB_Device_col = Urz\u0105dzenie
+MB_Eas_col = EAS
+MB_Email_Address_col = Adres e-mail
+MB_Last_Login_col = Ostatnie logowanie
+MB_Need_Prov = Wymaga obs\u0142ugi administracyjnej
+MB_Registered_Devices = Zarejestrowane urz\u0105dzenia
+MB_Server_col = serwer
+MB_Status_col = Status
+MB_Suspended = Zawieszony
+MB_Wipe_ACK = Wyczy\u015b\u0107 w toku
+MB_Wipe_Comp = Czyszczenie zako\u0144czone
+TABT_Mobile = mobilny
