--- a/WebRoot/messages/ZaMsg_ro.properties
+++ b/WebRoot/messages/ZaMsg_ro.properties
@@ -2777,3 +2777,28 @@ ERROR_InvalidRPLifetime = Intervalul trebuie s\u0103 fie un num\u0103r \u00eentr
 ERROR_RPExists = Politica \u201e{0}\u201d exist\u0103 deja.
 multiple_servers = servere multiple
 ERROR_INVALID_FILE_NAME = Nume de fi\u015fier nevalabil. Utiliza\u0163i butonul de r\u0103sfoire pentru a selecta un fi\u015fier valabil.
+
+BUSY_GETTING_SYNC_DEVICES = Se ob\u021bin dispozitive sincronizate ...
+BUSY_QUARANTINE_SYNC_DEVICES = Se suspend\u0103 dispozitivele sincronizate ...
+BUSY_REMOVING_SYNC_DEVICES = Se elimin\u0103 dispozitivele sincronizate ...
+BUSY_RESETING_SYNC_DEVICES = Se reseteaz\u0103 dispozitivele sincronizate ...
+BUSY_RESUMING_SYNC_DEVICES = Se permite reluarea dispozitivelor sincronizate ...
+BUSY_WIPING_SYNC_DEVICES = \u0218tergerea dispozitivelor sincronizate ...
+MB_Active = Activ
+MB_Blocked = Blocat
+MB_But_Resume = Relua\u021bi sincronizarea
+MB_But_Suspend = Suspenda\u021bi sincronizarea
+MB_But_Wipe = \u0218terge\u021bi dispozitivul
+MB_Device_Id_col = Identificatorul dispozitivului
+MB_Device_col = Dispozitiv
+MB_Eas_col = EAS
+MB_Email_Address_col = Adresa de email
+MB_Last_Login_col = Ultima logare
+MB_Need_Prov = Necesit\u0103 aprovizionare
+MB_Registered_Devices = Dispozitive \u00eenregistrate
+MB_Server_col = Server
+MB_Status_col = stare
+MB_Suspended = Suspendat
+MB_Wipe_ACK = \u0218terge\u021bi \u00een a\u0219teptare
+MB_Wipe_Comp = \u0218tergere finalizat\u0103
+TABT_Mobile = Mobil
