--- a/WebRoot/messages/ZaMsg_sl.properties
+++ b/WebRoot/messages/ZaMsg_sl.properties
@@ -2777,3 +2777,28 @@ ERROR_InvalidRPLifetime = Razpon mora biti pozitivno celo \u0161tevilo.
 ERROR_RPExists = Pravilnik "{0}"  \u017ee obstaja.
 multiple_servers = ve\u010d stre\u017enikov
 ERROR_INVALID_FILE_NAME = Neveljavno ime datoteke. Uporabite gumb brskalnika za izbiro veljavne datoteke.
+
+BUSY_GETTING_SYNC_DEVICES = Pridobivanje sinhroniziranih naprav ...
+BUSY_QUARANTINE_SYNC_DEVICES = Za\u010dasna ustavitev sinhroniziranih naprav ...
+BUSY_REMOVING_SYNC_DEVICES = Odstranjevanje sinhroniziranih naprav ...
+BUSY_RESETING_SYNC_DEVICES = Ponastavitev sinhroniziranih naprav ...
+BUSY_RESUMING_SYNC_DEVICES = Omogo\u010danje nadaljevanja sinhroniziranih naprav ...
+BUSY_WIPING_SYNC_DEVICES = Brisanje sinhroniziranih naprav ...
+MB_Active = Aktivno
+MB_Blocked = Blokirano
+MB_But_Resume = Nadaljuj sinhronizacijo
+MB_But_Suspend = Za\u010dasno ustavi sinhronizacijo
+MB_But_Wipe = Obri\u0161ite napravo
+MB_Device_Id_col = ID naprave
+MB_Device_col = Naprava
+MB_Eas_col = EAS
+MB_Email_Address_col = Email naslov
+MB_Last_Login_col = Zadnja prijava
+MB_Need_Prov = Potrebuje preskrbo
+MB_Registered_Devices = Registrirane naprave
+MB_Server_col = Stre\u017enik
+MB_Status_col = Stanje
+MB_Suspended = Suspended
+MB_Wipe_ACK = Obri\u0161ite v \u010dakanju
+MB_Wipe_Comp = Brisanje je kon\u010dano
+TABT_Mobile = Mobilni
