--- a/WebRoot/messages/ZaMsg_tr.properties
+++ b/WebRoot/messages/ZaMsg_tr.properties
@@ -2771,3 +2771,28 @@ ERROR_InvalidRPLifetime = Aral\u0131k pozitif bir tamsay\u0131 olmal\u0131d\u013
 ERROR_RPExists = "{0}" ilkesi zaten var.
 multiple_servers = birden fazla sunucu
 ERROR_INVALID_FILE_NAME = Ge\u00e7ersiz dosya ad\u0131. Ge\u00e7erli bir lisans dosyas\u0131 se\u00e7mek i\u00e7in G\u00f6zat d\u00fc\u011fmesini se\u00e7in.
+
+BUSY_GETTING_SYNC_DEVICES = Senkronize edilmi\u015f cihazlar al\u0131n\u0131yor ...
+BUSY_QUARANTINE_SYNC_DEVICES = Senkronize edilmi\u015f cihazlar ask\u0131ya al\u0131n\u0131yor ...
+BUSY_REMOVING_SYNC_DEVICES = Senkronize edilmi\u015f cihazlar kald\u0131r\u0131l\u0131yor ...
+BUSY_RESETING_SYNC_DEVICES = Senkronize edilmi\u015f cihazlar s\u0131f\u0131rlan\u0131yor ...
+BUSY_RESUMING_SYNC_DEVICES = Senkronize edilmi\u015f cihazlar\u0131n devam etmesine izin veriliyor ...
+BUSY_WIPING_SYNC_DEVICES = Senkronize edilmi\u015f cihazlar siliniyor ...
+MB_Active = Aktif
+MB_Blocked = Engellendi
+MB_But_Resume = Senkronizasyonu Devam Ettir
+MB_But_Suspend = Senkronizasyonu Ask\u0131ya Al
+MB_But_Wipe = Cihaz\u0131 Sil
+MB_Device_Id_col = Cihaz kimli\u011fi
+MB_Device_col = cihaz
+MB_Eas_col = EAS
+MB_Email_Address_col = E
+MB_Last_Login_col = Son giri\u015f
+MB_Need_Prov = Temel haz\u0131rl\u0131k gerekiyor
+MB_Registered_Devices = Kay\u0131tl\u0131 Cihazlar
+MB_Server_col = Sunucu
+MB_Status_col = durum
+MB_Suspended = Ask\u0131ya al\u0131nd\u0131
+MB_Wipe_ACK = Beklemede silin
+MB_Wipe_Comp = Temizleme i\u015flemi tamamland\u0131
+TABT_Mobile = Cep Telefonu
