--- a/WebRoot/messages/ZaMsg_eu.properties
+++ b/WebRoot/messages/ZaMsg_eu.properties
@@ -2768,3 +2768,28 @@ ERROR_InvalidRPLifetime = Zehaztutako bolumen-bidea ez da baliozkoa
 ERROR_RPExists = "{0}" politika ez dago.
 multiple_servers = zerbitzari anitzak
 ERROR_INVALID_FILE_NAME = Fitxategiaren izenak ez du balio. Erabili arakatzeko botoia balio duen fitxategia hautatzeko.
+
+BUSY_GETTING_SYNC_DEVICES = Sinkronizatutako gailuak lortzen ...
+BUSY_QUARANTINE_SYNC_DEVICES = Sinkronizatutako gailuak eteten ...
+BUSY_REMOVING_SYNC_DEVICES = Sinkronizatutako gailuak kentzen ...
+BUSY_RESETING_SYNC_DEVICES = Sinkronizatutako gailuak berrezartzen ...
+BUSY_RESUMING_SYNC_DEVICES = Sinkronizatutako gailuak berrabiarazteko baimena ematen ...
+BUSY_WIPING_SYNC_DEVICES = Sinkronizatutako gailuak ezabatzen ...
+MB_Active = Aktiboa
+MB_Blocked = Blokeatuta
+MB_But_Resume = Berrekin sinkronizazioa
+MB_But_Suspend = Eten sinkronizazioa
+MB_But_Wipe = Garbitu gailua
+MB_Device_Id_col = Gailuaren IDa
+MB_Device_col = Gailua
+MB_Eas_col = EAS
+MB_Email_Address_col = Posta elektroniko helbidea
+MB_Last_Login_col = Azken Saioa
+MB_Need_Prov = Hornikuntza behar du
+MB_Registered_Devices = Erregistratutako gailuak
+MB_Server_col = Zerbitzaria
+MB_Status_col = Egoera
+MB_Suspended = Etenda
+MB_Wipe_ACK = Garbitu zain
+MB_Wipe_Comp = Garbitu amaitu da
+TABT_Mobile = Mugikorra
