--- a/WebRoot/messages/ZaMsg_it.properties
+++ b/WebRoot/messages/ZaMsg_it.properties
@@ -2677,3 +2677,28 @@ ERROR_InvalidRPLifetime = L\u2019intervallo deve essere indicato da un numero in
 ERROR_RPExists = Il criterio "{0}" esiste gi\u00e0.
 multiple_servers = pi\u00f9 server
 ERROR_INVALID_FILE_NAME = Nome file non valido. Usa il pulsante Sfoglia per selezionare un file valido.
+
+BUSY_GETTING_SYNC_DEVICES = Ottenere dispositivi sincronizzati ...
+BUSY_QUARANTINE_SYNC_DEVICES = Sospensione dei dispositivi sincronizzati ...
+BUSY_REMOVING_SYNC_DEVICES = Rimozione dei dispositivi sincronizzati ...
+BUSY_RESETING_SYNC_DEVICES = Reimpostazione dei dispositivi sincronizzati ...
+BUSY_RESUMING_SYNC_DEVICES = Consentire la ripresa dei dispositivi sincronizzati ...
+BUSY_WIPING_SYNC_DEVICES = Cancellazione dei dati sui dispositivi sincronizzati ...
+MB_Active = Attivo
+MB_Blocked = Bloccato
+MB_But_Resume = Riprendi sincronizzazione
+MB_But_Suspend = Sospendi sincronizzazione
+MB_But_Wipe = Cancella dispositivo
+MB_Device_Id_col = ID del dispositivo
+MB_Device_col = Dispositivo
+MB_Eas_col = EAS
+MB_Email_Address_col = Indirizzo email
+MB_Last_Login_col = Ultimo accesso
+MB_Need_Prov = Necessita di provisioning
+MB_Registered_Devices = Dispositivi registrati
+MB_Server_col = server
+MB_Status_col = Stato
+MB_Suspended = Sospeso
+MB_Wipe_ACK = Cancella in sospeso
+MB_Wipe_Comp = Cancellazione completata
+TABT_Mobile = Mobile
