--- a/WebRoot/messages/ZaMsg_th.properties
+++ b/WebRoot/messages/ZaMsg_th.properties
@@ -2775,3 +2775,28 @@ ERROR_InvalidRPLifetime = \u0e0a\u0e48\u0e27\u0e07\u0e15\u0e49\u0e2d\u0e07\u0e40
 ERROR_RPExists = \u0e19\u0e42\u0e22\u0e1a\u0e32\u0e22 "{0}" \u0e21\u0e35\u0e2d\u0e22\u0e39\u0e48\u0e41\u0e25\u0e49\u0e27
 multiple_servers = \u0e2b\u0e25\u0e32\u0e22\u0e40\u0e0b\u0e34\u0e23\u0e4c\u0e1f\u0e40\u0e27\u0e2d\u0e23\u0e4c
 ERROR_INVALID_FILE_NAME = \u0e0a\u0e37\u0e48\u0e2d\u0e44\u0e1f\u0e25\u0e4c\u0e44\u0e21\u0e48\u0e16\u0e39\u0e01\u0e15\u0e49\u0e2d\u0e07 \u0e43\u0e0a\u0e49\u0e1b\u0e38\u0e48\u0e21 \u0e40\u0e23\u0e35\u0e22\u0e01\u0e14\u0e39 \u0e40\u0e1e\u0e37\u0e48\u0e2d\u0e40\u0e25\u0e37\u0e2d\u0e01\u0e44\u0e1f\u0e25\u0e4c\u0e17\u0e35\u0e48\u0e16\u0e39\u0e01\u0e15\u0e49\u0e2d\u0e07
+
+BUSY_GETTING_SYNC_DEVICES = \u0e01\u0e33\u0e25\u0e31\u0e07\u0e23\u0e31\u0e1a\u0e2d\u0e38\u0e1b\u0e01\u0e23\u0e13\u0e4c\u0e17\u0e35\u0e48\u0e0b\u0e34\u0e07\u0e04\u0e4c ...
+BUSY_QUARANTINE_SYNC_DEVICES = \u0e01\u0e33\u0e25\u0e31\u0e07\u0e23\u0e30\u0e07\u0e31\u0e1a\u0e2d\u0e38\u0e1b\u0e01\u0e23\u0e13\u0e4c\u0e17\u0e35\u0e48\u0e0b\u0e34\u0e07\u0e04\u0e4c ...
+BUSY_REMOVING_SYNC_DEVICES = \u0e01\u0e32\u0e23\u0e25\u0e1a\u0e2d\u0e38\u0e1b\u0e01\u0e23\u0e13\u0e4c\u0e17\u0e35\u0e48\u0e0b\u0e34\u0e07\u0e04\u0e4c ...
+BUSY_RESETING_SYNC_DEVICES = \u0e01\u0e33\u0e25\u0e31\u0e07\u0e23\u0e35\u0e40\u0e0b\u0e47\u0e15\u0e2d\u0e38\u0e1b\u0e01\u0e23\u0e13\u0e4c\u0e17\u0e35\u0e48\u0e0b\u0e34\u0e07\u0e04\u0e4c ...
+BUSY_RESUMING_SYNC_DEVICES = \u0e01\u0e33\u0e25\u0e31\u0e07\u0e2d\u0e19\u0e38\u0e0d\u0e32\u0e15\u0e43\u0e2b\u0e49\u0e2d\u0e38\u0e1b\u0e01\u0e23\u0e13\u0e4c\u0e17\u0e35\u0e48\u0e0b\u0e34\u0e07\u0e04\u0e4c\u0e01\u0e25\u0e31\u0e1a\u0e21\u0e32\u0e17\u0e33\u0e07\u0e32\u0e19\u0e15\u0e48\u0e2d ...
+BUSY_WIPING_SYNC_DEVICES = \u0e01\u0e33\u0e25\u0e31\u0e07\u0e25\u0e49\u0e32\u0e07\u0e02\u0e49\u0e2d\u0e21\u0e39\u0e25\u0e2d\u0e38\u0e1b\u0e01\u0e23\u0e13\u0e4c\u0e17\u0e35\u0e48\u0e0b\u0e34\u0e07\u0e04\u0e4c ...
+MB_Active = \u0e04\u0e25\u0e48\u0e2d\u0e07\u0e41\u0e04\u0e25\u0e48\u0e27
+MB_Blocked = \u0e16\u0e39\u0e01\u0e1a\u0e25\u0e47\u0e2d\u0e01
+MB_But_Resume = \u0e14\u0e33\u0e40\u0e19\u0e34\u0e19\u0e01\u0e32\u0e23\u0e0b\u0e34\u0e07\u0e04\u0e4c\u0e15\u0e48\u0e2d
+MB_But_Suspend = \u0e23\u0e30\u0e07\u0e31\u0e1a\u0e01\u0e32\u0e23\u0e0b\u0e34\u0e07\u0e04\u0e4c
+MB_But_Wipe = \u0e40\u0e0a\u0e47\u0e14\u0e2d\u0e38\u0e1b\u0e01\u0e23\u0e13\u0e4c
+MB_Device_Id_col = ID \u0e2d\u0e38\u0e1b\u0e01\u0e23\u0e13\u0e4c
+MB_Device_col = \u0e2d\u0e38\u0e1b\u0e01\u0e23\u0e13\u0e4c
+MB_Eas_col = \u0e07\u0e48\u0e32\u0e22
+MB_Email_Address_col = \u0e17\u0e35\u0e48\u0e2d\u0e22\u0e39\u0e48\u0e2d\u0e35\u0e40\u0e21\u0e25
+MB_Last_Login_col = \u0e40\u0e02\u0e49\u0e32\u0e2a\u0e39\u0e48\u0e23\u0e30\u0e1a\u0e1a\u0e04\u0e23\u0e31\u0e49\u0e07\u0e25\u0e48\u0e32\u0e2a\u0e38\u0e14
+MB_Need_Prov = \u0e15\u0e49\u0e2d\u0e07\u0e01\u0e32\u0e23\u0e01\u0e32\u0e23\u0e08\u0e31\u0e14\u0e40\u0e15\u0e23\u0e35\u0e22\u0e21
+MB_Registered_Devices = \u0e2d\u0e38\u0e1b\u0e01\u0e23\u0e13\u0e4c\u0e17\u0e35\u0e48\u0e25\u0e07\u0e17\u0e30\u0e40\u0e1a\u0e35\u0e22\u0e19
+MB_Server_col = \u0e40\u0e0b\u0e34\u0e23\u0e4c\u0e1f\u0e40\u0e27\u0e2d\u0e23\u0e4c
+MB_Status_col = \u0e2a\u0e16\u0e32\u0e19\u0e30
+MB_Suspended = \u0e16\u0e39\u0e01\u0e23\u0e30\u0e07\u0e31\u0e1a
+MB_Wipe_ACK = \u0e23\u0e2d\u0e01\u0e32\u0e23\u0e40\u0e0a\u0e47\u0e14
+MB_Wipe_Comp = \u0e40\u0e0a\u0e47\u0e14\u0e40\u0e2a\u0e23\u0e47\u0e08
+TABT_Mobile = \u0e21\u0e37\u0e2d\u0e16\u0e37\u0e2d
