ZCS-9475:- Implemented functionality to display registered devices in the mobile devices settings.

--- a/WebRoot/messages/ZaMsg_es.properties
+++ b/WebRoot/messages/ZaMsg_es.properties
@@ -2744,3 +2744,28 @@ ERROR_InvalidRPLifetime = El rango debe ser un n\u00famero entero positivo.
 ERROR_RPExists = La pol\u00edtica "{0}" ya existe.
 multiple_servers = servidores m\u00faltiples
 ERROR_INVALID_FILE_NAME = Nombre de archivo no v\u00e1lido. Utiliza el bot\u00f3n Examinar para seleccionar un archivo v\u00e1lido.
+
+BUSY_GETTING_SYNC_DEVICES = Obteniendo dispositivos sincronizados ...
+BUSY_QUARANTINE_SYNC_DEVICES = Suspendiendo dispositivos sincronizados ...
+BUSY_REMOVING_SYNC_DEVICES = Eliminando dispositivos sincronizados ...
+BUSY_RESETING_SYNC_DEVICES = Reiniciando dispositivos sincronizados ...
+BUSY_RESUMING_SYNC_DEVICES = Permitiendo que los dispositivos sincronizados se reanuden ...
+BUSY_WIPING_SYNC_DEVICES = Limpiando dispositivos sincronizados ...
+MB_Active = activo
+MB_Blocked = Obstruido
+MB_But_Resume = Reanudar sincronizaci\u00f3n
+MB_But_Suspend = Suspender sincronizaci\u00f3n
+MB_But_Wipe = Limpiar dispositivo
+MB_Device_Id_col = ID del dispositivo
+MB_Device_col = Dispositivo
+MB_Eas_col = EAS
+MB_Email_Address_col = Direcci\u00f3n de correo electr\u00f3nico
+MB_Last_Login_col = \u00daltimo acceso
+MB_Need_Prov = Necesita aprovisionamiento
+MB_Registered_Devices = Dispositivos registrados
+MB_Server_col = Servidor
+MB_Status_col = Estado
+MB_Suspended = Suspendido
+MB_Wipe_ACK = Limpiar pendiente
+MB_Wipe_Comp = Limpiar completado
+TABT_Mobile = M\u00f3vil
