--- a/WebRoot/messages/ZaMsg_ko.properties
+++ b/WebRoot/messages/ZaMsg_ko.properties
@@ -2713,3 +2713,28 @@ ERROR_InvalidRPLifetime = \ubc94\uc704\ub294 \uc591\uc758 \uc815\uc218\uc5ec\uc5
 ERROR_RPExists = "{0}" \uc815\ucc45\uc740 \uc774\ubbf8 \uc788\uc2b5\ub2c8\ub2e4.
 multiple_servers = \uc5ec\ub7ec \uc11c\ubc84
 ERROR_INVALID_FILE_NAME = \ud30c\uc77c \uc774\ub984\uc774 \uc62c\ubc14\ub974\uc9c0 \uc54a\uc2b5\ub2c8\ub2e4. \ucc3e\uc544\ubcf4\uae30 \ubc84\ud2bc\uc744 \uc0ac\uc6a9\ud558\uc5ec \uc62c\ubc14\ub978 \ud30c\uc77c\uc744 \uc120\ud0dd\ud558\uc138\uc694.
+
+BUSY_GETTING_SYNC_DEVICES = \ub3d9\uae30\ud654 \ub41c \uc7a5\uce58 \uac00\uc838 \uc624\uae30 ...
+BUSY_QUARANTINE_SYNC_DEVICES = \ub3d9\uae30\ud654 \ub41c \uc7a5\uce58 \uc77c\uc2dc \uc911\uc9c0 \uc911 ...
+BUSY_REMOVING_SYNC_DEVICES = \ub3d9\uae30\ud654 \ub41c \uc7a5\uce58 \uc81c\uac70 \uc911 ...
+BUSY_RESETING_SYNC_DEVICES = \ub3d9\uae30\ud654 \ub41c \uc7a5\uce58 \uc7ac\uc124\uc815 \uc911 ...
+BUSY_RESUMING_SYNC_DEVICES = \ub3d9\uae30\ud654 \ub41c \uae30\uae30 \uc7ac\uac1c \ud5c8\uc6a9 \uc911 ...
+BUSY_WIPING_SYNC_DEVICES = \ub3d9\uae30\ud654 \ub41c \uae30\uae30 \ucd08\uae30\ud654 \uc911 ...
+MB_Active = \uc720\ud6a8\ud55c
+MB_Blocked = \ub9c9\ud78c
+MB_But_Resume = \ub3d9\uae30\ud654 \uc7ac\uac1c
+MB_But_Suspend = \ub3d9\uae30\ud654 \uc77c\uc2dc \uc911\uc9c0
+MB_But_Wipe = \uae30\uae30\ub97c \ucd08\uae30\ud654
+MB_Device_Id_col = \uc7a5\uce58 \uc544\uc774\ub514
+MB_Device_col = \uc7a5\uce58
+MB_Eas_col = EAS
+MB_Email_Address_col = \uc774\uba54\uc77c \uc8fc\uc18c
+MB_Last_Login_col = \ub9c8\uc9c0\ub9c9 \ub85c\uadf8\uc778
+MB_Need_Prov = \ud504\ub85c\ube44\uc800\ub2dd \ud544\uc694
+MB_Registered_Devices = \ub4f1\ub85d \ub41c \uc7a5\uce58
+MB_Server_col = \uc12c\uae30\ub294 \uc0ac\ub78c
+MB_Status_col = \uc0c1\ud0dc
+MB_Suspended = \ub9e4\ub2ec\ub9b0
+MB_Wipe_ACK = \uc9c0\uc6b0\uae30 \ub300\uae30 \uc911
+MB_Wipe_Comp = \uc644\uc804 \uc0ad\uc81c
+TABT_Mobile = \ubcc0\ud558\uae30 \uc26c\uc6b4
