--- a/WebRoot/messages/ZaMsg_nl.properties
+++ b/WebRoot/messages/ZaMsg_nl.properties
@@ -2670,3 +2670,28 @@ ERROR_InvalidRPLifetime = Het bereik moet een positief geheel getal zijn.
 ERROR_RPExists = Beleid "{0}" bestaat al.
 multiple_servers = meerdere servers
 ERROR_INVALID_FILE_NAME = Ongeldige bestandsnaam. Gebruik de bladerknop om een geldig bestand te selecteren.
+
+BUSY_GETTING_SYNC_DEVICES = Gesynchroniseerde apparaten ophalen ...
+BUSY_QUARANTINE_SYNC_DEVICES = Gesynchroniseerde apparaten opschorten ...
+BUSY_REMOVING_SYNC_DEVICES = Gesynchroniseerde apparaten verwijderen ...
+BUSY_RESETING_SYNC_DEVICES = Gesynchroniseerde apparaten resetten ...
+BUSY_RESUMING_SYNC_DEVICES = Toestaan dat gesynchroniseerde apparaten hervatten ...
+BUSY_WIPING_SYNC_DEVICES = Gesynchroniseerde apparaten wissen ...
+MB_Active = Actief
+MB_Blocked = Geblokkeerd
+MB_But_Resume = Hervat de synchronisatie
+MB_But_Suspend = Synchronisatie onderbreken
+MB_But_Wipe = Wis het apparaat
+MB_Device_Id_col = Apparaat ID
+MB_Device_col = Apparaat
+MB_Eas_col = EAS
+MB_Email_Address_col = E-mailadres
+MB_Last_Login_col = Laatste aanmelding
+MB_Need_Prov = Vereist provisie
+MB_Registered_Devices = Geregistreerde apparaten
+MB_Server_col = Server
+MB_Status_col = Toestand
+MB_Suspended = Geschorst
+MB_Wipe_ACK = Veeg in behandeling
+MB_Wipe_Comp = Wissen voltooid
+TABT_Mobile = Mobiel
