--- a/WebRoot/messages/ZaMsg_hr.properties
+++ b/WebRoot/messages/ZaMsg_hr.properties
@@ -2786,3 +2786,27 @@ ERROR_RPExists = Policy "{0}" already exists.
 multiple_servers = multiple servers
 ERROR_INVALID_FILE_NAME = Invalid file name. Use browse button to select a valid file.
 
+BUSY_GETTING_SYNC_DEVICES = Dohva\u0107anje sinkroniziranih ure\u0111aja ...
+BUSY_QUARANTINE_SYNC_DEVICES = Obustavljanje sinkroniziranih ure\u0111aja ...
+BUSY_REMOVING_SYNC_DEVICES = Uklanjanje sinkroniziranih ure\u0111aja ...
+BUSY_RESETING_SYNC_DEVICES = Vra\u0107anje sinkroniziranih ure\u0111aja na zadano ...
+BUSY_RESUMING_SYNC_DEVICES = Omogu\u0107avanje nastavka sinkroniziranih ure\u0111aja ...
+BUSY_WIPING_SYNC_DEVICES = Brisanje sinkroniziranih ure\u0111aja ...
+MB_Active = Aktivan
+MB_Blocked = Blokiran
+MB_But_Resume = Nastavi sinkronizaciju
+MB_But_Suspend = Obustavi sinkronizaciju
+MB_But_Wipe = Obri\u0161ite ure\u0111aj
+MB_Device_Id_col = ID ure\u0111aja
+MB_Device_col = Ure\u0111aj
+MB_Eas_col = EAS
+MB_Email_Address_col = Email adresa
+MB_Last_Login_col = Zadnja prijava
+MB_Need_Prov = Potrebno osiguranje
+MB_Registered_Devices = Registrirani ure\u0111aji
+MB_Server_col = Poslu\u017eitelj
+MB_Status_col = Status
+MB_Suspended = Suspendiran
+MB_Wipe_ACK = Obri\u0161ite na \u010dekanju
+MB_Wipe_Comp = Brisanje zavr\u0161eno
+TABT_Mobile = Mobilni
