--- a/WebRoot/messages/ZaMsg_no.properties
+++ b/WebRoot/messages/ZaMsg_no.properties
@@ -2775,3 +2775,28 @@ ERROR_InvalidRPLifetime = Omr\u00e5det m\u00e5 v\u00e6re et positivt heltall.
 ERROR_RPExists = Policyen "{0}" eksisterer allerede.
 multiple_servers = flere servere
 ERROR_INVALID_FILE_NAME = Ugyldig filnavn. Bruk Bla gjennom-knappen for \u00e5 velge en gyldig fil.
+
+BUSY_GETTING_SYNC_DEVICES = F\u00e5 synkroniserte enheter ...
+BUSY_QUARANTINE_SYNC_DEVICES = Suspenderer synkroniserte enheter ...
+BUSY_REMOVING_SYNC_DEVICES = Fjerner synkroniserte enheter ...
+BUSY_RESETING_SYNC_DEVICES = Tilbakestiller synkroniserte enheter ...
+BUSY_RESUMING_SYNC_DEVICES = Tillater at synkroniserte enheter gjenopptas ...
+BUSY_WIPING_SYNC_DEVICES = T\u00f8rker synkroniserte enheter ...
+MB_Active = Aktiv
+MB_Blocked = Blokkert
+MB_But_Resume = Fortsett synkronisering
+MB_But_Suspend = Avbryt synkronisering
+MB_But_Wipe = T\u00f8rk av enheten
+MB_Device_Id_col = Enhets-ID
+MB_Device_col = Enhet
+MB_Eas_col = EAS
+MB_Email_Address_col = Epostadresse
+MB_Last_Login_col = Siste innlogging
+MB_Need_Prov = Trenger klargj\u00f8ring
+MB_Registered_Devices = Registrerte enheter
+MB_Server_col = Server
+MB_Status_col = Status
+MB_Suspended = Suspendert
+MB_Wipe_ACK = T\u00f8rk i p\u00e5vente
+MB_Wipe_Comp = T\u00f8rk ferdig
+TABT_Mobile = Mobil
