--- a/WebRoot/messages/ZaMsg_pt_BR.properties
+++ b/WebRoot/messages/ZaMsg_pt_BR.properties
@@ -2669,3 +2669,28 @@ ERROR_InvalidRPLifetime = O intervalo deve ser um n\u00famero inteiro positivo.
 ERROR_RPExists = A pol\u00edtica "{0}" j\u00e1 existe.
 multiple_servers = v\u00e1rios servidores
 ERROR_INVALID_FILE_NAME = Nome de arquivo inv\u00e1lido. Use o bot\u00e3o procurar para selecionar um arquivo v\u00e1lido.
+
+BUSY_GETTING_SYNC_DEVICES = Obtendo dispositivos sincronizados ...
+BUSY_QUARANTINE_SYNC_DEVICES = Suspendendo dispositivos sincronizados ...
+BUSY_REMOVING_SYNC_DEVICES = Removendo dispositivos sincronizados ...
+BUSY_RESETING_SYNC_DEVICES = Redefinindo dispositivos sincronizados ...
+BUSY_RESUMING_SYNC_DEVICES = Permitindo que os dispositivos sincronizados sejam retomados ...
+BUSY_WIPING_SYNC_DEVICES = Limpando dispositivos sincronizados ...
+MB_Active = Ativo
+MB_Blocked = Bloqueado
+MB_But_Resume = Retomar sincroniza\u00e7\u00e3o
+MB_But_Suspend = Suspender Sincroniza\u00e7\u00e3o
+MB_But_Wipe = Limpar dispositivo
+MB_Device_Id_col = Identificador do dispositivo
+MB_Device_col = Dispositivo
+MB_Eas_col = EAS
+MB_Email_Address_col = Endere\u00e7o de e-mail
+MB_Last_Login_col = \u00daltimo Login
+MB_Need_Prov = Precisa de provisionamento
+MB_Registered_Devices = Dispositivos Registrados
+MB_Server_col = Servidor
+MB_Status_col = Status
+MB_Suspended = Suspenso
+MB_Wipe_ACK = Limpeza pendente
+MB_Wipe_Comp = Limpeza conclu\u00edda
+TABT_Mobile = M\u00f3vel
