ZCS-9073: Initial commit

--- a/WebRoot/messages/ZaMsg_de.properties
+++ b/WebRoot/messages/ZaMsg_de.properties
@@ -2050,6 +2050,9 @@ confirm = Best\u00e4tigen
 publicComputer = \u00d6ffentlicher Computer
 enterUsername = Bitte geben Sie Ihren Administrator-Nutzernamen und Ihr Passwort ein.
 enterNewPassword = Bitte geben Sie ein neues Passwort ein und wiederholen Sie es im Best\u00e4tigungsfeld.
+twoFactorCodeTitle = Verwendung der Zwei-Faktor-Authentifizierung
+twoFactorCodeLabel = Code
+twoFactorCodeButton = \u00dcberpr\u00fcfen
 
 goToServers = Server verwalten
 goToGlobalSettings = Globale Einstellungen verwalten
