--- a/WebRoot/messages/ZaMsg_fr.properties
+++ b/WebRoot/messages/ZaMsg_fr.properties
@@ -2060,6 +2060,9 @@ confirm = Confirmez
 publicComputer = Ordinateur public
 enterUsername = Saisissez le nom de l\u2019administrateur et son mot de passe
 enterNewPassword = Veuillez saisir un nouveau mot de passe et ressaisissez-le dans le champ de confirmation.
+twoFactorCodeTitle = Utilisation de l\u0027authentification \u00e0 deux facteurs
+twoFactorCodeLabel = Code
+twoFactorCodeButton = V\u00e9rifier
 
 goToServers = Gestion des serveurs
 goToGlobalSettings = Gestion de param\u00e8tres globaux
