--- a/WebRoot/messages/ZaMsg_ms.properties
+++ b/WebRoot/messages/ZaMsg_ms.properties
@@ -2079,6 +2079,9 @@ confirm = Sah
 publicComputer = Komputer Awam
 enterUsername = Sila masukkan nama pengguna dan kata laluan pentadbir
 enterNewPassword = Sila masukkan kata laluan baharu dan masukkannya semula dalam medan pengesahan.
+twoFactorCodeTitle = Menggunakan pengesahan dua faktor
+twoFactorCodeLabel = Kod
+twoFactorCodeButton = Sahkan
 
 goToServers = Urus Pelayan
 goToGlobalSettings = Urus Tetapan Global
