--- a/WebRoot/messages/ZaMsg_zh_CN.properties
+++ b/WebRoot/messages/ZaMsg_zh_CN.properties
@@ -2069,6 +2069,9 @@ confirm = \u786e\u8ba4
 publicComputer = \u516c\u7528\u8ba1\u7b97\u673a
 enterUsername = \u8bf7\u8f93\u5165\u7ba1\u7406\u5458\u7528\u6237\u540d\u548c\u5bc6\u7801
 enterNewPassword = \u8bf7\u8f93\u5165\u65b0\u5bc6\u7801\u5e76\u5728\u786e\u8ba4\u5b57\u6bb5\u4e2d\u518d\u6b21\u8f93\u5165\u3002
+twoFactorCodeTitle = \u4f7f\u7528\u4e24\u56e0\u7d20\u9a8c\u8bc1
+twoFactorCodeLabel = \u7801
+twoFactorCodeButton = \u6821\u9a8c
 
 goToServers = \u7ba1\u7406\u670d\u52a1\u5668
 goToGlobalSettings = \u7ba1\u7406\u5168\u5c40\u8bbe\u7f6e
