--- a/WebRoot/messages/ZaMsg_ja.properties
+++ b/WebRoot/messages/ZaMsg_ja.properties
@@ -2036,6 +2036,9 @@ confirm = \u78ba\u8a8d
 publicComputer = \u30d1\u30d6\u30ea\u30c3\u30af\u30b3\u30f3\u30d4\u30e5\u30fc\u30bf
 enterUsername = \u7ba1\u7406\u8005\u306e\u30e6\u30fc\u30b6\u30fc\u540d\u3068\u30d1\u30b9\u30ef\u30fc\u30c9\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
 enterNewPassword = \u65b0\u3057\u3044\u30d1\u30b9\u30ef\u30fc\u30c9\u3092\u5165\u529b\u3057\u3001\u78ba\u8a8d\u7528\u306e\u30d5\u30a3\u30fc\u30eb\u30c9\u306b\u305d\u306e\u30d1\u30b9\u30ef\u30fc\u30c9\u3092\u3082\u3046\u4e00\u5ea6\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+twoFactorCodeTitle = \u4e8c\u8981\u7d20\u8a8d\u8a3c\u306e\u4f7f\u7528
+twoFactorCodeLabel = \u30b3\u30fc\u30c9
+twoFactorCodeButton = \u78ba\u8a8d
 
 goToServers = \u30b5\u30fc\u30d0\u30fc\u3092\u7ba1\u7406
 goToGlobalSettings = \u30b0\u30ed\u30fc\u30d0\u30eb\u8a2d\u5b9a\u3092\u7ba1\u7406
