ZCS-9073: Initial commit

--- a/WebRoot/messages/ZaMsg_ca.properties
+++ b/WebRoot/messages/ZaMsg_ca.properties
@@ -2075,6 +2075,9 @@ confirm = Confirma
 publicComputer = Ordinador p\u00fablic
 enterUsername = Introdu\u00efu el nom d\u2019usuari i la contrasenya d\u2019administrador
 enterNewPassword = Introdu\u00efu una contrasenya nova i torneu a introduir-la al camp de confirmaci\u00f3.
+twoFactorCodeTitle = Utilitzant l\u2019autenticaci\u00f3 de dos factors
+twoFactorCodeLabel = Codi
+twoFactorCodeButton = Verifiqueu
 
 goToServers = Administra servidors
 goToGlobalSettings = Administra la configuraci\u00f3 general
