--- a/WebRoot/messages/ZaMsg_da.properties
+++ b/WebRoot/messages/ZaMsg_da.properties
@@ -2016,6 +2016,9 @@ confirm = Bekr\u00e6ft
 publicComputer = Offentlig computer
 enterUsername = Indtast administratorbrugernavn og -adgangskode
 enterNewPassword = Indtast en ny adgangskode og indtast den igen i bekr\u00e6ftelsesfeltet.
+twoFactorCodeTitle = Brug af tofaktorautentificering
+twoFactorCodeLabel = Kode
+twoFactorCodeButton = Verificere
 
 goToServers = Administrer servere
 goToGlobalSettings = Administrer globale indstillinger
