--- a/WebRoot/messages/ZaMsg_en_AU.properties
+++ b/WebRoot/messages/ZaMsg_en_AU.properties
@@ -2065,6 +2065,9 @@ confirm = Confirm
 publicComputer = Public Computer
 enterUsername = Please enter administrator username and password
 enterNewPassword = Please enter a new password and re-enter it in the confirmation field.
+twoFactorCodeTitle = Using two factor authentication
+twoFactorCodeLabel = Code
+twoFactorCodeButton = Verify
 
 goToServers = Manage Servers
 goToGlobalSettings = Manage Global Settings
