--- a/WebRoot/messages/ZaMsg_es.properties
+++ b/WebRoot/messages/ZaMsg_es.properties
@@ -2055,6 +2055,9 @@ confirm = Confirmar
 publicComputer = Ordenador p\u00fablico
 enterUsername = Por favor introduce tu nombre de usuario y contrase\u00f1a de administrador.
 enterNewPassword = Introduce una nueva contrase\u00f1a y vuelve a introducirla en el campo de confirmaci\u00f3n.
+twoFactorCodeTitle = Usar autenticaci\u00f3n de dos factores
+twoFactorCodeLabel = C\u00f3digo
+twoFactorCodeButton = Verificar
 
 goToServers = Administrar servidores
 goToGlobalSettings = Administrar configuraci\u00f3n general
