--- a/WebRoot/messages/ZaMsg_it.properties
+++ b/WebRoot/messages/ZaMsg_it.properties
@@ -2016,6 +2016,9 @@ confirm = Conferma
 publicComputer = Computer pubblico
 enterUsername = Inserisci di nuovo nome utente e password amministratore
 enterNewPassword = Inserisci la nuova password e ripeterla nel campo di conferma.
+twoFactorCodeTitle = Utilizzo dell\u0027autenticazione a due fattori
+twoFactorCodeLabel = Codice
+twoFactorCodeButton = Verificare  
 
 goToServers = Gestisci server
 goToGlobalSettings = Gestisci impostazioni globali
