--- a/WebRoot/messages/ZaMsg_pt.properties
+++ b/WebRoot/messages/ZaMsg_pt.properties
@@ -2079,6 +2079,9 @@ confirm = Confirmar
 publicComputer = Computador p\u00fablico
 enterUsername = Introduza o nome de utilizador e a palavra-passe do administrador
 enterNewPassword = Introduza uma nova palavra-passe e reintroduza-a no campo de confirma\u00e7\u00e3o.
+twoFactorCodeTitle = Usando autentica\u00e7\u00e3o de dois fatores
+twoFactorCodeLabel = C\u00f3digo
+twoFactorCodeButton = Verificar
 
 goToServers = Gerir servidores
 goToGlobalSettings = Gerir defini\u00e7\u00f5es globais
