--- a/WebRoot/messages/ZaMsg_vi.properties
+++ b/WebRoot/messages/ZaMsg_vi.properties
@@ -2079,6 +2079,9 @@ confirm = X\u00e1c nh\u1eadn
 publicComputer = M\u00e1y t\u00ednh c\u00f4ng c\u1ed9ng
 enterUsername = Vui l\u00f2ng nh\u1eadp t\u00ean ng\u01b0\u1eddi d\u00f9ng v\u00e0 m\u1eadt kh\u1ea9u qu\u1ea3n tr\u1ecb vi\u00ean
 enterNewPassword = Vui l\u00f2ng nh\u1eadp m\u1ed9t m\u1eadt kh\u1ea9u m\u1edbi v\u00e0 nh\u1eadp l\u1ea1i n\u00f3 trong tr\u01b0\u1eddng x\u00e1c nh\u1eadn.
+twoFactorCodeTitle = S\u1eed d\u1ee5ng x\u00e1c th\u1ef1c hai y\u1ebfu t\u1ed1
+twoFactorCodeLabel = M\u00e3
+twoFactorCodeButton = Ki\u1ec3m ch\u1ee9ng
 
 goToServers = Qu\u1ea3n l\u00fd m\u00e1y ch\u1ee7
 goToGlobalSettings = Qu\u1ea3n l\u00fd ph\u1ea7n thi\u1ebft l\u1eadp chung
