--- a/WebRoot/messages/ZaMsg_eu.properties
+++ b/WebRoot/messages/ZaMsg_eu.properties
@@ -2070,6 +2070,9 @@ confirm = Berretsi
 publicComputer = Ordenagailu publikoa
 enterUsername = Idatzi erabiltzaile-izena eta administratzaile-pasahitza.
 enterNewPassword = Idatzi beste pasahitz bat, eta sartu berriz berrespen-eremuan.
+twoFactorCodeTitle = Bi faktore autentifikazio erabiliz
+twoFactorCodeLabel = Kodea
+twoFactorCodeButton = Egiaztatu
 
 goToServers = Administratu zerbitzariak
 goToGlobalSettings = Administratu konfigurazio orokorra
