--- a/WebRoot/messages/ZaMsg_ko.properties
+++ b/WebRoot/messages/ZaMsg_ko.properties
@@ -2024,6 +2024,9 @@ confirm = \ud655\uc778
 publicComputer = \uacf5\uc6a9 \ucef4\ud4e8\ud130
 enterUsername = \uad00\ub9ac\uc790 \uc0ac\uc6a9\uc790 \uc774\ub984\uacfc \ube44\ubc00\ubc88\ud638\ub97c \uc785\ub825\ud558\uc138\uc694.
 enterNewPassword = \uc0c8 \ube44\ubc00\ubc88\ud638\ub97c \uc785\ub825\ud558\uace0 \ud655\uc778 \ud544\ub4dc\uc5d0 \ub2e4\uc2dc \uc785\ub825\ud558\uc138\uc694.
+twoFactorCodeTitle = \u0032 \ub2e8\uacc4 \uc778\uc99d \uc0ac\uc6a9
+twoFactorCodeLabel = \uc554\ud638
+twoFactorCodeButton = \ud655\uc778
 
 goToServers = \uc11c\ubc84 \uad00\ub9ac
 goToGlobalSettings = \uc804\uc5ed \uc124\uc815 \uad00\ub9ac
