--- a/WebRoot/messages/ZaMsg_pt_BR.properties
+++ b/WebRoot/messages/ZaMsg_pt_BR.properties
@@ -2015,6 +2015,9 @@ confirm = Confirmar
 publicComputer = Computador p\u00fablico
 enterUsername = Digite o nome de usu\u00e1rio e senha do administrador.
 enterNewPassword = Digite uma nova senha e digite-a novamente no campo de confirma\u00e7\u00e3o.
+twoFactorCodeTitle = Usando autentica\u00e7\u00e3o de dois fatores
+twoFactorCodeLabel = C\u00f3digo
+twoFactorCodeButton = Verificar
 
 goToServers = Gerenciar servidores
 goToGlobalSettings = Gerenciar configura\u00e7\u00f5es globais
