ZCS-9073: Initial commit

--- a/WebRoot/messages/ZaMsg_hu.properties
+++ b/WebRoot/messages/ZaMsg_hu.properties
@@ -2077,6 +2077,9 @@ confirm = Meger\u0151s\u00edt\u00e9s
 publicComputer = Nyilv\u00e1nos sz\u00e1m\u00edt\u00f3g\u00e9p
 enterUsername = Adja meg a rendszergazdai felhaszn\u00e1l\u00f3nevet \u00e9s jelsz\u00f3t
 enterNewPassword = Adjon meg egy \u00faj jelsz\u00f3t, \u00e9s a meger\u0151s\u00edt\u00e9si mez\u0151be \u00edrja be \u00fajra.
+twoFactorCodeTitle = K\u00e9tfaktoros hiteles\u00edt\u00e9s haszn\u00e1lata
+twoFactorCodeLabel = K\u00f3d
+twoFactorCodeButton = Ellen\u0151rizze
 
 goToServers = Kiszolg\u00e1l\u00f3k kezel\u00e9se
 goToGlobalSettings = Glob\u00e1lis be\u00e1ll\u00edt\u00e1sok kezel\u00e9se
