--- a/WebRoot/messages/ZaMsg_in.properties
+++ b/WebRoot/messages/ZaMsg_in.properties
@@ -2081,6 +2081,9 @@ confirm = Konfirmasi
 publicComputer = Komputer Publik
 enterUsername = Masukkan nama pengguna administrator dan kata sandi.
 enterNewPassword = Masukkan kata sandi baru dan masukkan lagi kata sandi ini di bidang konfirmasi.
+twoFactorCodeTitle = Menggunakan otentikasi dua faktor
+twoFactorCodeLabel = Kode
+twoFactorCodeButton = Memeriksa
 
 goToServers = Kelola Server
 goToGlobalSettings = Kelola Pengaturan Global
