--- a/WebRoot/messages/ZaMsg_iw.properties
+++ b/WebRoot/messages/ZaMsg_iw.properties
@@ -2077,6 +2077,9 @@ confirm = \u05d0\u05d9\u05e9\u05d5\u05e8
 publicComputer = \u05de\u05d7\u05e9\u05d1 \u05e6\u05d9\u05d1\u05d5\u05e8\u05d9
 enterUsername = \u05d4\u05d6\u05df \u05d0\u05ea \u05e9\u05dd \u05d4\u05de\u05e9\u05ea\u05de\u05e9 \u05d5\u05d4\u05e1\u05d9\u05e1\u05de\u05d4 \u05e9\u05dc \u05de\u05e0\u05d4\u05dc \u05d4\u05de\u05e2\u05e8\u05db\u05ea
 enterNewPassword = \u05d4\u05d6\u05df \u05e1\u05d9\u05e1\u05de\u05d4 \u05d7\u05d3\u05e9\u05d4 \u05d5\u05d4\u05d6\u05df \u05d0\u05d5\u05ea\u05d4 \u05e9\u05d5\u05d1 \u05d1\u05e9\u05d3\u05d4 \u05d4\u05d0\u05d9\u05e9\u05d5\u05e8.
+twoFactorCodeTitle = \u05e9\u05d9\u05de\u05d5\u05e9 \u05d1\u05d0\u05d9\u05de\u05d5\u05ea \u05e9\u05e0\u05d9 \u05d2\u05d5\u05e8\u05de\u05d9\u05dd
+twoFactorCodeLabel = \u05e7\u05d5\u05d3
+twoFactorCodeButton = \u05ea\u05d0\u05e9\u05e8
 
 goToServers = \u05e0\u05d9\u05d4\u05d5\u05dc \u05e9\u05e8\u05ea\u05d9\u05dd
 goToGlobalSettings = \u05e0\u05d9\u05d4\u05d5\u05dc \u05d4\u05d2\u05d3\u05e8\u05d5\u05ea \u05db\u05dc\u05dc\u05d9\u05d5\u05ea
