--- a/WebRoot/messages/ZaMsg_nl.properties
+++ b/WebRoot/messages/ZaMsg_nl.properties
@@ -2018,6 +2018,9 @@ confirm = Bevestigen
 publicComputer = Openbare computer
 enterUsername = Voer gebruikersnaam en wachtwoord van de beheerder in
 enterNewPassword = Voer een nieuw wachtwoord in en typ het ook in het veld Bevestigen.
+twoFactorCodeTitle = Twee-factor-authenticatie gebruiken
+twoFactorCodeLabel = Code
+twoFactorCodeButton = Verifi\u00ebren
 
 goToServers = Servers beheren
 goToGlobalSettings = Algemene instellingen beheren
