--- a/WebRoot/messages/ZaMsg_no.properties
+++ b/WebRoot/messages/ZaMsg_no.properties
@@ -2081,6 +2081,9 @@ confirm = Bekreft
 publicComputer = Offentlig datamaskin
 enterUsername = Angi administrators brukernavn og passord
 enterNewPassword = Angi et nytt passord, og repeter det i bekreftelsesfeltet.
+twoFactorCodeTitle = Bruker tofaktorautentisering
+twoFactorCodeLabel = Kode
+twoFactorCodeButton = Bekrefte
 
 goToServers = Administrer servere
 goToGlobalSettings = Administrer globale innstillinger
