--- a/WebRoot/messages/ZaMsg_pl.properties
+++ b/WebRoot/messages/ZaMsg_pl.properties
@@ -2068,6 +2068,9 @@ confirm = Potwierd\u017a
 publicComputer = Komputer Publiczny
 enterUsername = Wprowad\u017a nazw\u0119 u\u017cytkownika i has\u0142o administratora
 enterNewPassword = Wprowad\u017a nowe has\u0142o i wprowad\u017a je ponownie w polu potwierdzenia.
+twoFactorCodeTitle = Korzystanie z uwierzytelniania dwuskładnikowego
+twoFactorCodeLabel = Kod
+twoFactorCodeButton = Zweryfikowa\u0107
 
 goToServers = Zarz\u0105dzanie serwerami
 goToGlobalSettings = Zarz\u0105dzanie ustawieniami globalnymi
