--- a/WebRoot/messages/ZaMsg_ro.properties
+++ b/WebRoot/messages/ZaMsg_ro.properties
@@ -2077,6 +2077,9 @@ confirm = Confirmare
 publicComputer = Computer public
 enterUsername = Introduce\u0163i numele de utilizator \u015fi parola administratorului
 enterNewPassword = Introduce\u0163i o parol\u0103 nou\u0103 aici \u015fi \u00een c\u00e2mpul de confirmare.
+twoFactorCodeTitle = Folosind autentificarea cu doi factori
+twoFactorCodeLabel = Cod
+twoFactorCodeButton = Verifica
 
 goToServers = Gestionare servere
 goToGlobalSettings = Gestionare set\u0103ri globale
