--- a/WebRoot/messages/ZaMsg_sl.properties
+++ b/WebRoot/messages/ZaMsg_sl.properties
@@ -2077,6 +2077,9 @@ confirm = Potrdi
 publicComputer = Javni ra\u010dunalnik
 enterUsername = Vnesite skrbni\u0161ko uporabni\u0161ko ime in geslo
 enterNewPassword = Vnesite novo geslo in ga ponovite v polju za potrditev.
+twoFactorCodeTitle = Uporaba dvofaktorske avtentikacije
+twoFactorCodeLabel = Koda
+twoFactorCodeButton = Preverite
 
 goToServers = Upravljanje stre\u017enikov
 goToGlobalSettings = Upravljanje globalnih nastavitev
