--- a/WebRoot/messages/ZaMsg_sv.properties
+++ b/WebRoot/messages/ZaMsg_sv.properties
@@ -2018,6 +2018,9 @@ confirm = Bekr\u00e4fta
 publicComputer = Offentlig dator
 enterUsername = Ange administrat\u00f6rens anv\u00e4ndarnamn och l\u00f6senord
 enterNewPassword = Ange ett nytt l\u00f6senord och skriv in det igen i f\u00e4ltet f\u00f6r bekr\u00e4ftelse.
+twoFactorCodeTitle = Anv\u00e4nda tv\u00e5faktorautentisering
+twoFactorCodeLabel = Koda
+twoFactorCodeButton = Kontrollera
 
 goToServers = Hantera servrar
 goToGlobalSettings = Hantera globala inst\u00e4llningar
