--- a/WebRoot/messages/ZaMsg_tr.properties
+++ b/WebRoot/messages/ZaMsg_tr.properties
@@ -2075,6 +2075,9 @@ confirm = Onayla
 publicComputer = Herkese A\u00e7\u0131k Bilgisayar
 enterUsername = L\u00fctfen y\u00f6netici kullan\u0131c\u0131 ad\u0131n\u0131 ve parolas\u0131n\u0131 girin
 enterNewPassword = L\u00fctfen yeni bir parola girin ve onay alan\u0131na yeniden girin.
+twoFactorCodeTitle = \u0130ki fakt\u00f6rl\u00fc kimlik do\u011frulama kullanma
+twoFactorCodeLabel = Kodu
+twoFactorCodeButton = Do\u011frulayın
 
 goToServers = Sunucular\u0131 Y\u00f6net
 goToGlobalSettings = Global Ayarlar\u0131 Y\u00f6net
