--- a/WebRoot/messages/ZaMsg_zh_HK.properties
+++ b/WebRoot/messages/ZaMsg_zh_HK.properties
@@ -2027,6 +2027,9 @@ confirm = \u78ba\u8a8d
 publicComputer = \u516c\u7528\u96fb\u8166
 enterUsername = \u8acb\u8f38\u5165\u7cfb\u7d71\u7ba1\u7406\u54e1\u7684\u7528\u6236\u540d\u7a31\u548c\u5bc6\u78bc
 enterNewPassword = \u8acb\u8f38\u5165\u65b0\u5bc6\u78bc\uff0c\u4e26\u5728\u78ba\u8a8d\u6b04\u4e2d\u518d\u8f38\u5165\u4e00\u6b21\u3002
+twoFactorCodeTitle = \u4f7f\u7528\u4e24\u56e0\u7d20\u9a8c\u8bc1
+twoFactorCodeLabel = \u7801
+twoFactorCodeButton = \u6821\u9a8c
 
 goToServers = \u7ba1\u7406\u4f3a\u670d\u5668
 goToGlobalSettings = \u7ba1\u7406\u5168\u7db2\u57df\u8a2d\u5b9a
