--- a/WebRoot/messages/ZaMsg_zh_TW.properties
+++ b/WebRoot/messages/ZaMsg_zh_TW.properties
@@ -2075,6 +2075,9 @@ confirm = \u78ba\u8a8d
 publicComputer = \u516c\u5171\u96fb\u8166
 enterUsername = \u8acb\u8f38\u5165\u7ba1\u7406\u54e1\u4f7f\u7528\u8005\u540d\u7a31\u548c\u5bc6\u78bc
 enterNewPassword = \u8acb\u8f38\u5165\u65b0\u5bc6\u78bc\uff0c\u7136\u5f8c\u5728\u78ba\u8a8d\u6b04\u4f4d\u4e2d\u91cd\u65b0\u8f38\u5165\u3002
+twoFactorCodeTitle = \u4f7f\u7528\u5169\u56e0\u7d20\u9a57\u8b49
+twoFactorCodeLabel = \u78bc
+twoFactorCodeButton = \u6821\u9a57
 
 goToServers = \u7ba1\u7406\u4f3a\u670d\u5668
 goToGlobalSettings = \u7ba1\u7406\u5168\u57df\u8a2d\u5b9a
